Todo App using html talwind css and js

--- a/interview/d-6/index.html
+++ b/interview/d-6/index.html
@@ -15,10 +15,21 @@
 </html>
 
 <script>
-    function hof(arr) {
-        let ans = arr.every(i=>i>2)
 
-        console.log(ans)
+
+const products = [
+  { id: 1, name: "Pen", price: 10, category: "Stationery" },
+  { id: 2, name: "Notebook", price: 50, category: "Stationery" },
+  { id: 3, name: "Shirt", price: 500, category: "Clothing" },
+  { id: 4, name: "Jeans", price: 1000, category: "Clothing" },
+  { id: 5, name: "Mug", price: 150, category: "Kitchenware" }
+];
+
+
+    function hof(arr) {
+       
+
+        // console.log()
     }
 
     let arr = [3, 6, 9, 12, 15, 18];
